# vectorless-rag

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/plans/: 2026-03-04-vectorless-rag-design.md  2026-03-12-claude-desktop-polish.md  2026-03-21-slm-metadata-and-cleanup-design.md
docs/superpowers/specs/: 2026-03-12-claude-desktop-polish-design.md
paper/: references.bib  tgg_paper.tex
src/: App.module.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pricing.json  util.rs  validation.rs
src-tauri/src/agent/: chat_handler.rs  context.rs  deterministic.rs  events.rs  mod.rs  query.rs  runtime.rs  tools.rs
src-tauri/src/db/: mod.rs  schema.rs  traces.rs
src-tauri/src/document/: cache.rs  image.rs  liteparse.rs  metadata.rs  mod.rs  parser.rs  tree.rs
src-tauri/src/llm/: agentrouter.rs  anthropic.rs  google.rs  groq.rs  local.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  provider.rs  retry.rs  slm.rs
src/components/chat/: ChatPanel.module.css  ChatPanel.tsx  ThinkingBlock.module.css  ThinkingBlock.tsx
src/components/common/: ConversationSwitcher.module.css  ConversationSwitcher.tsx  IconButton.module.css  IconButton.tsx  ModelDownloadDialog.module.css  ModelDownloadDialog.tsx  SlidePanel.module.css  SlidePanel.tsx  TopBar.module.css  TopBar.tsx
src/components/preview/: CanvasView.module.css  CanvasView.tsx  DocsPanel.module.css  DocsPanel.tsx  PreviewPanel.module.css  PreviewPanel.tsx  RelationsView.module.css  RelationsView.tsx  TracePanel.module.css  TracePanel.tsx  TraceView.module.css  TraceView.tsx  TreeView.module.css  TreeView.tsx  shared.module.css
src/components/settings/: SettingsModal.module.css  SettingsModal.tsx
src/components/sidebar/: Sidebar.module.css  Sidebar.tsx
src/lib/: tauri.ts
src/stores/: chat.test.ts  chat.ts  documents.test.ts  documents.ts  localModel.ts  settings.test.ts  settings.ts  theme.ts
src/styles/: theme.css
src/test/: setup.ts
