[package]
name = "vectorless-rag"
version = "0.1.0"
description = "Vectorless RAG — Agentic Document Explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "vectorless_rag_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
async-trait = "0.1"
pulldown-cmark = "0.12"
pdf-extract = "0.7"
calamine = "0.26"
csv = "1"
zip = "2"
quick-xml = "0.37"
